public_html/static/music_worklet_inprogress/music.css
html, body{
    padding: 0px;
    margin: 0px;
}

body {
    color: #ababab;
    background: #000;
    font-family: Segoe UI, Helvetica, Arial, Sans-Serif;
}

.header {
    position: fixed;
    top: 0;
    padding-left: 25px;
    background-color: #000; 
    width: 100%;    
}

.body {    
    /*margin-top: 90px;
    margin-bottom: 200px;
    padding-left: 25px;*/
    position:absolute;
    top:90px;
    bottom: 200px;    
    left: 25px;
    right: 0px;
    overflow: auto;    
}

.track:hover {
    background-color: yellow;
}

.footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 200px;
    padding-left: 25px;
    background-color:blue;    
}

audio {
    width: 80%; margin:20px;
}

#seekbar {
    width: 60%; margin:20px;
}

.timedisplay {
    width: 55px;
}

.controlbtns {
    /*margin-right: 10px;
    margin-left: 10px;*/
    /*padding-right: 0px;    
    padding-left: 0px;*/
    padding: 0;
    border-width: thick;
}

.albumart {
    /*display: block;*/
    display: inline-block;
    max-width:200px;
    max-height:100px;
    min-height: 100px;
    width: auto;
    height: auto;
    margin-right: 20px;
}

.trackmetadata {
    display: inline-block;
    margin-left: 20px;
}

.trackmetadatainner {

}

.trackdiv {
    display: flex;
    align-items: center;
    /*justify-content: center*/
}

.fsalbumart {
    position: absolute;
    top: 0;
    left: 0;
    /*width: 100%;
    height: 100%;*/
    max-width: 100%;
    max-height: 100%;
    width: auto;
    height: auto;
    text-align: center;
    z-index: 201;
}



#prev_text {
    white-space: normal;
    overflow: hidden;
    min-height: 100px;
}

#play_text {
    /*min-width: 50%;
    max-width: 80%;
    width: auto;*/
    white-space: normal;
    overflow: hidden;
    min-height: 100px;
}

#next_text {
    white-space: normal;
    overflow: hidden;
    min-height: 100px;
}

.playertable {
    table-layout: fixed;
    white-space: nowrap;
}

.playertable th, .playertable td {
    min-width: 10%;
    max-width: 80;
}

